--- a/Tarefa3KryzianSousa.ipynb
+++ b/Tarefa3KryzianSousa.ipynb
@@ -25,25 +25,47 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Escrever um notebook do Colab para calcular o número de segundos $s$, dado o número de horas contida em uma variável $h$.\n",
+        "\n",
+        "Use o notebook para encontrar o número de segundos para:"
+      ],
+      "metadata": {
+        "id": "HyHfv2ph3Xuz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Parte 1 - Segundos em 1h\n",
+        "\n",
+        "(Obs.: 1h tem 60 minutos com 60 segundos)"
+      ],
+      "metadata": {
+        "id": "4Z5_0Sy63tkA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "h=3600\n",
-        "print(\"Uma hora h = 3.600 segundos\")"
+        "hs=60*60 #quantidade de segundos em 1h\n",
+        "print(hs) "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "f7kDFLMDX89m",
-        "outputId": "3f337369-a4f6-45ed-aa22-33410cf291fd"
+        "id": "0MYF6bIv4Snf",
+        "outputId": "f44872cf-9129-4948-89cb-66b84717b889"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Uma hora h = 3.600 segundos\n"
+            "3600\n"
           ]
         }
       ]
@@ -51,27 +73,38 @@
     {
       "cell_type": "markdown",
       "source": [
-        " 1) uma hora e meia"
+        "Parte 2 - Conversão\n",
+        "\n",
+        "A variável h recebe a quantidade de horas a serem convertidas e s realiza a conversão."
       ],
       "metadata": {
-        "id": "DUUQN22HZZwT"
+        "id": "4Gsuc-sc4iUe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) uma hora e meia:"
+      ],
+      "metadata": {
+        "id": "0uQbQcVq43xR"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "from re import S\n",
-        "s=1.5*h\n",
-        "print(\"Em uma hora e meia, nós temos\", s , \"segundos\")"
+        "h=1.5 #hora a ser convertida\n",
+        "s= h*hs #hora em segundos\n",
+        "print(\"Em uma hora e meia, nós temos\", s, \"segundos\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YkmqvwqRZ3eS",
-        "outputId": "41bdfb2a-91ee-434f-b8ac-b2265412194b"
+        "id": "i8S65DVj48RM",
+        "outputId": "3847dc1f-7ae0-4ef3-e281-b011fe636357"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,23 +127,24 @@
     {
       "cell_type": "code",
       "source": [
-        "s=12*h\n",
-        "print(\"Em uma hora e meia, nós temos\", s , \"segundos\")"
+        "h=12 #hora a ser convertida\n",
+        "s= h*hs #hora em segundos\n",
+        "print(\"Em 12 horas, nós temos\", s, \"segundos\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CE0b0w-4Y1SZ",
-        "outputId": "7021bb34-a181-49c9-b469-05affaa807f9"
+        "outputId": "c53dcee2-1071-4509-c7b2-4e539463fee5"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Em uma hora e meia, nós temos 43200 segundos\n"
+            "Em 12 horas, nós temos 43200 segundos\n"
           ]
         }
       ]
@@ -127,23 +161,24 @@
     {
       "cell_type": "code",
       "source": [
-        "s=24*h\n",
-        "print(\"Em uma hora e meia, nós temos\", s , \"segundos\")"
+        "h=24 #hora a ser convertida\n",
+        "s= h*hs #hora em segundos\n",
+        "print(\"Em 24 horas, nós temos\", s, \"segundos\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t4A3VvjjahKq",
-        "outputId": "b002b977-9514-4fd5-8eee-cd1e95c932f7"
+        "outputId": "bc04eb6e-a869-4bab-dd3c-7e31c6d2bc45"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Em uma hora e meia, nós temos 86400 segundos\n"
+            "Em 24 horas, nós temos 86400 segundos\n"
           ]
         }
       ]
